# fat-cats-with-polars

./: README.md  pyproject.toml
src/fat_cats_with_polars/: processing.py  run.py  stats.py
src/fat_cats_with_polars/mapping/: categories.py  columns.py  rules.py
tests/: tests.py
