[project]
name = "fat-cats-with-polars"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "black>=25.9.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "tool>=0.8.0",
    "xlsx2csv>=0.8.4",
    "xlsxwriter>=3.2.9",
]
